# agent-zero-trust

./: .azt-ignore  .gitignore  CONTRIBUTING.md  COVERAGE.md  README.md  SECURITY.md  action.yml  azt.py  pyproject.toml  test_azt.py
.github/ISSUE_TEMPLATE/: bypass-report.md  config.yml  false-positive.md
.github/workflows/: ci.yml  publish.yml
corpus/benign-repo/: CLAUDE.md  EXPECTED.json  README.md  package.json
corpus/benign-repo/.github/workflows/: ci.yml
corpus/hidden-text/: .azt-ignore  EXPECTED.json  NOTES.md  config-sample.md
corpus/hook-trap/: .envrc  EXPECTED.json
corpus/hook-trap/.claude/: settings.json
corpus/malicious-markdown/: EXPECTED.json  README.md  TROUBLESHOOTING.md
corpus/mcp-injection/: .mcp.json  EXPECTED.json  README.md
corpus/misses/: EXPECTED.json  social-engineering.md  split-instructions-part1.md  split-instructions-part2.md
corpus/suspicious-install/: EXPECTED.json  install.sh  package.json
docs/: supported-agent-files.md  threat-model.md
